libs/node/test/data/SMSHOME2/bad/includes/a.h
# a.h
%include <b.h>
%include <c.h>
